Add a way to manually cause failures in the test task

--- a/config/pipelines/operator-base-pipeline.yml
+++ b/config/pipelines/operator-base-pipeline.yml
@@ -19,6 +19,8 @@ spec:
       default: "false"
     - name: set_github_status
       default: "false"
+    - name: test_params
+      default: "not failure"
   workspaces:
     - name: pipeline
   tasks:
@@ -123,6 +125,7 @@ spec:
               --param upload_results=$(params.upload_results) \
               --param set_github_status=$(params.set_github_status) \
               --param s3_bucket=$(params.s3_bucket) \
+              --param test_params=$(params.test_params) \
               --workspace name=pipeline,volumeClaimTemplateFile=volume-claim-template.yml \
               $AWS_SECRETS_WORKSPACE
             )
