--- a/config/pipelines/operator-test-pipeline.yml
+++ b/config/pipelines/operator-test-pipeline.yml
@@ -14,6 +14,7 @@ spec:
     - name: s3_bucket
     - name: upload_results
     - name: set_github_status
+    - name: test_params
   workspaces:
     - name: pipeline
     - name: aws-secrets
@@ -84,6 +85,8 @@ spec:
           value: "$(context.pipelineRun.name).xml"
         - name: junit_html_path
           value: "$(context.pipelineRun.name).html"
+        - name: test_params
+          value: $(params.test_params)
 
   finally:
     # The aws-cli task from Tekton Hub is not used because we need the task to
